syntax = "proto3";

option csharp_namespace = "Protos";
import "google/protobuf/empty.proto";


service Wishlist {
	rpc AddWish (AddWishRequest) returns (AddWishResponse);
	rpc GetWishes (google.protobuf.Empty) returns (stream GetWishesResponse);
}

message AddWishRequest {
	Product product = 1;
	int32 quantity = 2;
	bytes file = 3;

	message Product {
		string name = 1;
		string category = 2;
	}
}

message AddWishResponse {
	string message = 1;
}

message GetWishesResponse {
	string name = 1;
	string category = 2;
	int32 quantity = 3;
}